<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
     android:background="#F0F0F0"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/login_top_layout"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:background="@drawable/title_bar" >

        <Button
            android:id="@+id/meals_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_back"
            android:onClick="mealsBack"
            android:text="返回"
            android:textColor="#fff"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="点 菜"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/meals_myorder"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@drawable/title_btn_right"
            android:onClick="mealsMyOrder"
            android:text="我的菜单"
            android:textColor="#fff"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
             android:id="@+id/index_meals_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.16"
            android:layout_margin="5dp"
            android:background="@drawable/login_editbox"
            android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:hint="输入编码/缩略拼音" />

        <ImageButton
            android:id="@+id/index_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_gravity="center|clip_vertical"
            android:background="@drawable/login_editbox"
            android:src="@drawable/select_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <GridView
                android:id="@+id/index_grid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="2"
                android:verticalSpacing="10dp" >
            </GridView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical" >

           <Button
                android:id="@+id/menu1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/meal_btn_style"
                android:text="@string/zc" />

            <Button
                android:id="@+id/menu2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/meal_btn_style"
                android:text="@string/lc" />

            <Button
                android:id="@+id/menu3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/meal_btn_style"
                android:text="@string/tl" />

            <Button
                android:id="@+id/menu4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/meal_btn_style"
                android:text="@string/zs" />

            <Button
                android:id="@+id/menu5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/meal_btn_style"
                android:text="@string/dx" />

            <Button
                android:id="@+id/menu6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/meal_btn_style"
                android:text="@string/js" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>